Added images, js, css, board and players are working

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
 </head>
 <body>
     <div class="container">
-        <!-- <h1>Tic Tac Toe</h1> -->
-        <div class="square-top-left" tabindex="0"><div class=""></div>
-        <div class="square-top-center" tabindex="0"><div class=""></div>
-        <div class="square-top-right" tabindex="0"><div class=""></div>
-        <div class="square-middle-left" tabindex="0"><div class=""></div>
-        <div class="square-center" tabindex="0"><div class=""></div>
-        <div class="square-middle-right" tabindex="0"><div class=""></div>
-        <div class="square-bottom-left" tabindex="0"><div class=""></div>
-        <div class="square-bottom-middle" tabindex="0"><div class=""></div>
-        <div class="square-bottom-right" tabindex="0"><div class=""></div>
+        <div class="board" id="board">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
 
-        <img class="background" src="images/background.png" alt="The playing board">
-        <!-- <img src="images/Horde.jpeg" alt="World of Warcraft Alliance Emblem">
-        <img src="images/Alliance.png" alt="World of Warcraft Horde Emblem"> -->
         <div class="score">
             <p class="player1"></p>
             <p class="tie"></p>
