--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div>
         <div class="player1">
             <h1>Player 1</h1>
-            <p>0</p>
+            <div id="player1-score">0</div>
         </div>
         <div class="player2">
             <h1>Player 2</h1>
-            <p>0</p>
+            <div id="player2-score">0</div>
         </div>
         <div class="board" id="board">
             <div class="cell"></div>
