--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
     <script src="js/jquery.js"></script>
     <script src="js/tictactoe.js"></script>
     <title>Tic Tac Toe</title>
@@ -11,11 +12,11 @@
 <body>
     <div>
         <div class="player1">
-            <h1>Player 1</h1>
+            <h1>Horde</h1>
             <div id="player1-score">0</div>
         </div>
         <div class="player2">
-            <h1>Player 2</h1>
+            <h1>Alliance</h1>
             <div id="player2-score">0</div>
         </div>
         <div class="board" id="board">
